# strprox

./: .gitignore  .gitmodules  Cargo.toml  README.md  gen_links.ts  search.drawio  topk2.typ  topk_search.typ
benches/: basic_meta.rs  index.rs  varied_ed.rs
docs/: ped3.html
docs/compare_index_building/fst/new/: sample.json
docs/compare_index_building/fst/report/: index.html
docs/compare_index_building/meta/change/: estimates.json
docs/compare_index_building/meta/new/: tukey.json
docs/fst_varied_ed/ped_bounded/1/base/: estimates.json  sample.json  tukey.json
docs/fst_varied_ed/ped_bounded/1/change/: estimates.json
docs/fst_varied_ed/ped_bounded/1/new/: tukey.json
docs/fst_varied_ed/ped_bounded/1/report/: index.html
docs/fst_varied_ed/ped_bounded/2/base/: benchmark.json  estimates.json  sample.json
docs/fst_varied_ed/ped_bounded/2/change/: estimates.json
docs/fst_varied_ed/ped_bounded/2/new/: estimates.json  tukey.json
docs/fst_varied_ed/ped_bounded/2/report/: index.html
docs/fst_varied_ed/ped_bounded/3/base/: sample.json
docs/fst_varied_ed/ped_bounded/3/change/: estimates.json
docs/fst_varied_ed/ped_bounded/3/new/: benchmark.json  estimates.json  tukey.json
docs/fst_varied_ed/ped_bounded/3/report/: index.html
docs/fst_varied_ed/ped_bounded/4/base/: sample.json  tukey.json
docs/fst_varied_ed/ped_bounded/4/change/: estimates.json
docs/fst_varied_ed/ped_bounded/4/new/: estimates.json  sample.json  tukey.json
docs/fst_varied_ed/ped_bounded/4/report/: index.html
docs/fst_varied_ed/ped_bounded/report/: index.html
docs/fst_varied_ed/report/: index.html
docs/meta_varied_ed/ped_bounded/1/base/: estimates.json  tukey.json
docs/meta_varied_ed/ped_bounded/1/change/: estimates.json
docs/meta_varied_ed/ped_bounded/1/new/: estimates.json  sample.json  tukey.json
docs/meta_varied_ed/ped_bounded/1/report/: index.html
docs/meta_varied_ed/ped_bounded/2/base/: estimates.json  sample.json
docs/meta_varied_ed/ped_bounded/2/change/: estimates.json
docs/meta_varied_ed/ped_bounded/2/new/: benchmark.json  estimates.json  tukey.json
docs/meta_varied_ed/ped_bounded/2/report/: index.html
docs/meta_varied_ed/ped_bounded/3/base/: benchmark.json  estimates.json  tukey.json
docs/meta_varied_ed/ped_bounded/3/change/: estimates.json
docs/meta_varied_ed/ped_bounded/3/new/: sample.json  tukey.json
docs/meta_varied_ed/ped_bounded/3/report/: index.html
docs/meta_varied_ed/report/: index.html
examples/: simple.rs
publish/compare_index_building/fst/base/: tukey.json
publish/compare_index_building/fst/change/: estimates.json
publish/compare_index_building/fst/new/: benchmark.json  estimates.json
publish/compare_index_building/meta/base/: estimates.json
publish/compare_index_building/meta/new/: benchmark.json  sample.json
publish/compare_index_building/meta/report/: index.html
publish/compare_index_building/report/: index.html
publish/meta_varied_ed/ped_bounded/report/: index.html
src/: lib.rs  strprox.rs
src/levenshtein/: mod.rs
src/strprox/prefix/: mod.rs
src/strprox/prefix/fst/: mod.rs
src/strprox/prefix/meta/: debug.rs  mod.rs
src/tests/: errors.md  mod.rs
stats/: Cargo.toml  README.md
(+26 files in other folders)
