workspace = { members = ["src/tests/make_noise"] }
[package]
name = "strprox"
version = "0.3.3"
edition = "2021"
description = "Top-k string autocompletion"
repository = "https://github.com/anusarati/strprox/"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["autocomplete"]
exclude = ["npm/", "src/tests"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yoke = { version = "0.7.3", features = ["derive"] }
fst = "0.4"
debug_print = "1.0.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
ptrie = { path = "./ptrie" }
slab = "0.4.9"
polonius-the-crab = "0.4.1"
derive-new = "0.6.0"
tracing = "0.1.41"
rand = { optional = true, version = "0.8" }

[features]
serde = ["dep:serde"]
wasm = ["wasm-bindgen", "js-sys"]
test = ["dep:rand"]
default = ["test"]

[dev-dependencies]
generic-tests = "0.1.2"
tracing-subscriber = "0.3.19"
criterion = { version = "0.6", features = ["html_reports"] }

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[[bench]]
name = "basic_meta"
harness = false

[[bench]]
name = "index"
harness = false

[profile.bench]
opt-level = 3