# workspace = { members = ["src/tests/make_noise", "stats"] }

[package]
name = "metacomplete"
version = "2.0.1"
edition = "2024"
description = "Top-k string autocompletion"
repository = "https://github.com/ple1n/strprox"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["autocomplete", "fuzzy", "algorithm", "search"]
exclude = ["npm/", "src/tests", "/docs", "*.ts", "*.typ", "*.drawio"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yoke = { version = "0.7.3", features = ["derive"] }
fst = { version = "0.4", optional = true }
debug_print = "1.0.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
metacomplete_ptrie = { version = "0.7" }
slab = "0.4.9"
polonius-the-crab = "0.4.1"
derive-new = "0.6.0"
tracing = "0.1.41"
rand = { optional = true, version = "0.8" }

[features]
fst = ["dep:fst"]
serde = ["dep:serde"]
wasm = ["wasm-bindgen", "js-sys"]
test = ["dep:rand", "fst"]
default = ["test"]

[dev-dependencies]
generic-tests = "0.1.2"
tracing-subscriber = "0.3.19"
criterion = { version = "0.6", features = ["html_reports"] }

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[[bench]]
name = "varied_ed"
harness = false

[[bench]]
name = "index"
harness = false

[profile.bench]
opt-level = 3
