[package]
name = "stats"
version = "0.1.0"
edition = "2024"


[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
metacomplete = { path = ".." }

yoke = { version = "0.7.3", features = ["derive"] }
fst = { version = "0.4" }
debug_print = "1.0.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
tracing = "0.1.41"
rand = { version = "0.8" }

tracing-subscriber = "0.3.19"
plotly = "0.12.1"

